project(yoonvision_http LANGUAGES CXX)

# pkgconfig 설정
include(GNUInstallDirs)
set(PREFIX ${CMAKE_INSTALL_PREFIX})
set(LIBDIR ${CMAKE_INSTALL_LIBDIR})
set(INCLUDEDIR "${PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}")
if(NOT DEFINED VERSION OR VERSION STREQUAL "")
  set(VERSION "${CMAKE_PROJECT_VERSION}")
endif()

# 소스 파일 추가
file(GLOB_RECURSE YOONVISION_HTTP_SOURCES CONFIGURE_DEPENDS
  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
)

# Shared Library 생성
add_library(${PROJECT_NAME} SHARED ${YOONVISION_HTTP_SOURCES})
target_include_directories(${PROJECT_NAME}
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(${PROJECT_NAME} PUBLIC yoonvision)

# 설치
install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(DIRECTORY
  ${CMAKE_CURRENT_SOURCE_DIR}/include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

configure_file(
  lib${PROJECT_NAME}.pc.in
  lib${PROJECT_NAME}.pc
  @ONLY
)

install(FILES
  ${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}.pc
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

install(DIRECTORY
  ${CMAKE_CURRENT_SOURCE_DIR}/resources/
  DESTINATION share/yoonvision_http/resources
)
